--- a/ui/ags-v3/styles/_bar.scss
+++ b/ui/ags-v3/styles/_bar.scss
@@ -373,7 +373,6 @@ button.clip-entry-btn {
     font-weight: 500;
     color: var(--crystal-text);
     min-width: 38px;
-    xalign: 1.0;
 }
 
 .bar-popover-icon-btn {
